--- a/package.json
+++ b/package.json
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/TylerMcKenzie/local_devbox/issues"
   },
-  "homepage": "https://github.com/TylerMcKenzie/local_devbox#readme"
+  "homepage": "https://github.com/TylerMcKenzie/local_devbox#readme",
+  "devDependencies": {
+    "fast-live-reload": "^2.8.1",
+    "nodemon": "^1.19.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  }
 }
